--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                 <div class="cart__count">
 
-                    <span class="cart__count--text">Artículos</span>
+                    <span class="cart__count--text1">Artículos</span>
 
                     <span class="cart__count--item">0</span>
 
@@ -270,7 +270,7 @@
 
                 <div class="cart__total">
 
-                    <span class="cart__count--text">Total</span>
+                    <span class="cart__count--text2">Total</span>
 
                     <span class="cart__total--item">$0</span>
 
@@ -342,7 +342,7 @@
 
             <div class="footer__bottom">
 
-                <p class="footer__text">Todos los derechos reservados</p>
+                <p class="footer__text">&copy 2023 Ecomerce. Todos los derechos reservados</p>
 
             </div>
 
