--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                         <li class="footer__item">
 
-                            <a href="#" class="footer__link">
+                            <a href="https://github.com/Kenkiun" target="_blank" class="footer__link">
 
                                 <i class='bx bxl-github'></i>
 
@@ -228,7 +228,7 @@
 
                         <li class="footer__item">
 
-                            <a href="#" class="footer__link">
+                            <a href="https://www.instagram.com/julioo_liu/" target="_blank" class="footer__link">
 
                                 <i class='bx bxl-instagram'></i>
 
@@ -238,7 +238,7 @@
 
                         <li class="footer__item">
 
-                            <a href="#" class="footer__link">
+                            <a href="https://www.linkedin.com/in/julio-liu-4b5b6826a/" target="_blank" class="footer__link">
 
                                 <i class='bx bxl-linkedin-square' ></i>
 
